@@ -134,10 +134,6 @@ if (isset($_GET["id_agente"])){
 
 	} else {
 		echo "<div class='nf'>".$lang_label["no_alerts"]."</div>";
-	      	$id_user = $_SESSION["id_usuario"];
-	if ( (give_acl($id_user, 0, "LM")==1) OR (give_acl($id_user, 0, "AW")==1 ) OR (give_acl($id_user, 0, "PM")==1) OR (give_acl($id_user, 0, "DM")==1) OR (give_acl($id_user, 0, "UM")==1 )){
-	      echo "&nbsp;<form method='post' action='index.php?sec=gagente&sec2=godmode/agentes/configurar_agente&tab=alert&id_agente=$id_agente'><input type='submit' class='sub next' name='crt' value='".$lang_label["create_alert"]."'></form>";
-	      }
 	}
 
 } else {
